--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>Who Am I</h2>
                 <p>I am a 24 year old graduate from Boston University, currently living in Atlanta, GA.</p>
                 <img src="running.jpg" alt="Running picture of Eric" id="runningpic">
-                <img src="IMG_3580.jpg" alt="Picture of Eric eating pizza" id="pizzapic">
+                <img src="IMG_3580.JPG" alt="Picture of Eric eating pizza" id="pizzapic">
             </div>
 
             <div class="toggle interests">
