--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
             <nav>
                 <ul>
-                    <li class="button about-me"><a href="#">About</a></li>
-                    <li class="button interests"><a href="#">Interests</a></li>
-                    <li class="button specialties"><a href="#">Specialties</a></li>
-                    <li class="button contact"><a href="#">Contact</a></li>
-                    <li class="button clear"><a href="#">Clear Chalkboard</a></li>
+                    <li class="button about-me"><a href="#about-me">About</a></li>
+                    <li class="button interests"><a href="#interests">Interests</a></li>
+                    <li class="button specialties"><a href="#specialties">Specialties</a></li>
+                    <li class="button contact"><a href="#contact">Contact</a></li>
+                    <li class="button clear"><a href="#clear">Clear Chalkboard</a></li>
                 </ul>
             </nav>
             
